# computer-graphics-fundamentals

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.org  ideias.txt
data/door/: EDITOR_door_entry.mtl  EDITOR_door_open.mtl
include/: collision.h  configs.h  lab_functions.h  matrices.h
src/: glad.c  main.cpp  shader_fragment.glsl  shader_vertex.glsl
textures/: model.mtl
